Modified CSS for layout issue

--- a/src/DAG/css/Dag.css
+++ b/src/DAG/css/Dag.css
@@ -104,14 +104,16 @@ div.connector:hover {
     margin-top: 10px;
 }
 
-@media screen and (min-height: 600px) {
-    .reactflow-sideBar {
-        height: calc(100vh - 27vh) !important
+@media screen and (max-height: 600px) {
+    div.reactflow-sideBar {
+        height: calc(100vh - 13vh) !important
     }
 
-    .json-area {
-        height: calc(100vh - 45vh) !important
+    textarea.json-area {
+        height: calc(100vh - 35vh) !important
     }
+
+
 }
 
 @media screen and (min-width: 768px) {
@@ -126,6 +128,10 @@ div.connector:hover {
 
     .reactflow-sideBar {
         height: calc(100vh - 27.7vh);
+    }
+
+    textarea.json-area {
+        height: calc(100vh - 35vh) !important
     }
 }
 
@@ -413,8 +419,8 @@ select#dagList {
     justify-content: space-between;
     flex-direction: column;
     align-items: center;
-    /* height: calc(100vh - 11.7vh); */
-    height: calc(100% - 11%);
+    height: calc(100vh - 13vh) !important;
+    /* height: calc(100% - 11%); */
 }
 
 @media only screen and (max-width: 767px) {
@@ -647,9 +653,9 @@ input#funcLists {
 }
 
 .splitter-layout {
-    /* width: 98% !important; */
-    height: 99% !important;
-    position: relative !important;
+    width: 98% !important;
+    height: 98% !important;
+    /* position: relative !important; */
 }
 
 #a_unique_id {
